--- a/WorkShop 2/BoatClub/BoatClub/BoatClub.csproj
+++ b/WorkShop 2/BoatClub/BoatClub/BoatClub.csproj
@@ -43,17 +43,16 @@
   <ItemGroup>
     <Compile Include="Controller\Menu.cs" />
     <Compile Include="Model\Boat.cs" />
-    <Compile Include="Model\BoatFunctions.cs" />
     <Compile Include="Model\BoatList.cs" />
     <Compile Include="Model\Member.cs" />
-    <Compile Include="Model\MemberFunction.cs" />
     <Compile Include="Model\MemberList.cs" />
-    <Compile Include="Model\SharedMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer\SerializerXML.cs" />
+    <Compile Include="View\BoatView.cs" />
     <Compile Include="View\ConsoleView.cs" />
     <Compile Include="View\ListViews.cs" />
+    <Compile Include="View\MemberView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
