--- a/WorkShop 3/BlackJack/BlackJack.csproj
+++ b/WorkShop 3/BlackJack/BlackJack.csproj
@@ -81,6 +81,7 @@
     <Compile Include="model\rules\IHitStrategy.cs" />
     <Compile Include="model\rules\InternationalNewGameStrategy.cs" />
     <Compile Include="model\rules\INewGameStrategy.cs" />
+    <Compile Include="model\IObserver.cs" />
     <Compile Include="model\rules\RulesFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
